# pcp-solver

./: .gitignore  Cargo.toml  README.md  graph.dot
proof/pcpdef/: PCP.thy  ROOT
proof/pcpdef/document/: root.tex
proof/pcplib/: NFA.thy  NFAPCPUtil.thy  PCPLemmas.thy  PCPNFA.thy  PCPTrans.thy  ROOT
src/: armc.rs  automaton.rs  conf_automaton.rs  dep.rs  enumerate_instances.rs  infix_prefix_suffix_method.rs  isabelle.rs  lib.rs  pcp.rs  pcpseq.rs  regular_language_method.rs  union_find.rs
src/proof/: append_word.rs  autconf_def.rs  autset_def.rs  intersect_aut.rs  isabelle_files.rs  lemma_accpet.rs  lemma_accpet_init.rs  lemma_closed.rs  lemma_contains.rs  lemma_invariant.rs  lemma_step_contained.rs  mod.rs  nfa_def.rs  organizer.rs  organizer_impl.rs  pcp_instance_def.rs  pref_quotient.rs  proof.rs  prover_config.rs  step_autconf_tile.rs  union_aut.rs
