[package]
name = "pcp-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
rand="0.8.4"
itertools="0.10.1"
graphviz-rust = "0.7.0"
log = "0.4.0"
ulid = "1.1.2"
nom = "7.1.3"
kgst = "0.1.1"
cargo-instruments = "0.4.9"
handlebars = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8.0"
grb = "2.0.1"
pprof = { version = "0.13", features = ["flamegraph"] }
regex-syntax = "0.8.4"
indicatif = "0.17.8"

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[lib]
crate-type = ["cdylib", "rlib"]
